# robotic_welding

./: .gitignore  CMakeLists.txt
demo1/: CMakeLists.txt  main.cpp  v groove butt welding piece.mtl  world.urdf  world1.urdf
demo2/: CMakeLists.txt  ForceFilter.h  Logger.h  demo2.cpp  haptic_interface.cpp  simulator.cpp  testLogger.cpp  visualizer.cpp  world.urdf
demo3/: CMakeLists.txt  demo3.cpp  demo3.h  estimate_joint.py  plot_weld_trajectory.py  readme.txt
demo4/: CMakeLists.txt  demo4.cpp  demo4.h  estimate_circular_joint.py
demo5/: CMakeLists.txt  README.txt  demo5.cpp  parts_curvilinear.mtl  plotMultiJointData.py  stitch_joints.py  world5.urdf
resources/kuka_iiwa/: kuka_iiwa.urdf
resources/kuka_iiwa/meshes/: base.mtl  daihen_welding_tool.mtl  link1.mtl  link2.mtl  link3.mtl  link6.mtl  tig_welding_torch.mtl
resources/meshes/: torch.mtl
resources/torobo/: torobo.urdf  torobo_original.urdf
resources/torobo/meshes/: base.mtl  link_mat.mtl  tig_welding_torch.mtl
src/force_sensor/: ForceSensorDisplay.h  ForceSensorSim.h
src/geometry/: CapsuleDistanceHull.h
